--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.ctbu.lc</groupId>
+    <groupId>com.dagu.lightchaser</groupId>
     <artifactId>light-chaser-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>light-chaser-server</name>
