--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.4.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.22</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
