--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       url: jdbc:mysql://localhost:3306/light_chaser_server?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
       username: root
-      password: 123456
+      password: qq123123
 
 
 
@@ -25,3 +25,5 @@ light-chaser:
   project-resource-path: /D:/project/light-chaser-server # 项目资源路径
   source-image-path: /images/ # 源图片路径
   cover-path: /covers/ # 封面路径
+  migration: # 是否自动跑sql脚本
+    enable: true
