--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.jdbc.Driver
       url: jdbc:mysql://localhost:3306/light_chaser_server?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
@@ -29,7 +30,7 @@ light-chaser:
   migration: # 是否自动跑sql脚本
     enable: true
 
-logging:
-  config: classpath:log4j2-spring.xml
-  level:
-    cn.jay.repository: trace
+#logging:
+#  config: classpath:log4j2-spring.xml
+#  level:
+#    cn.jay.repository: trace
