--- a/light-chaser-security/pom.xml
+++ b/light-chaser-security/pom.xml
@@ -5,23 +5,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>lightchaser</groupId>
-        <artifactId>lightchaser-data-provider</artifactId>
+        <artifactId>light-chaser-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>lightchaser-data-provider-base</artifactId>
-    <dependencies>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
-        </dependency>
+    <groupId>lightchaser</groupId>
+    <artifactId>light-chaser-security</artifactId>
+
+    <dependencies>
         <dependency>
             <groupId>lightchaser</groupId>
             <artifactId>lightchaser-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
