--- a/light-chaser-server/src/main/resources/application.yml
+++ b/light-chaser-server/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: dev
   datasource:
     druid:
       driver-class-name: com.mysql.jdbc.Driver
@@ -8,7 +10,7 @@ spring:
 
 
 server:
-  port: 8080
+  port: 8081
 #  address: 0.0.0.0
 #
 #  compression:
