--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/light_chaser_server_open?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
       username: root
-      password: 123456
+      password: root
 
 
 
@@ -28,7 +28,7 @@ light-chaser:
   source-image-path: /static/images/ # 源图片路径
   cover-path: /static/covers/ # 封面路径
   migration: # 是否自动跑sql脚本
-    enable: true
+    enable: false
 
 #logging:
 #  config: classpath:log4j2-spring.xml
