feat(database): 使用 SQLite 数据库开箱即用
- 将数据库从 MySQL 更改为 SQLite，实现开箱即用
- 更新 MyBatis Plus 配置，使用 SQLite 数据库类型
- 修改数据库迁移脚本，适配 SQLite
- 更新数据源工厂类，支持多种数据库连接
- 修改测试数据库连接的方法，增加对 SQLite 的支持

--- a/pom.xml
+++ b/pom.xml
@@ -37,25 +37,35 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- 数据库驱动依赖 -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.31</version>
+            <version>8.0.33</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.7.3</version>
+            <version>42.6.0</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
-            <version>19.3.0.0</version> <!-- 这里指定你需要的版本 -->
+            <version>21.9.0.0</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>9.2.1.jre8</version> <!-- 这里指定你需要的版本 -->
+            <version>12.2.0.jre8</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -72,11 +82,6 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>3.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-3-starter</artifactId>
-            <version>1.2.22</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
