feat(加密): 实现数据源密码的RSA+AES加密传输与存储
添加RSA密钥对生成与配置，实现前端密码加密传输流程
新增CryptoController提供公钥获取接口
重构DatasourceService支持加密密码处理
添加完整的加密解密测试用例
更新.gitignore排除.claude文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,13 @@ light-chaser:
   cover-path: /static/covers/ # 封面路径
   migration: # 是否自动跑sql脚本
     enable: true
+  crypto:
+    rsa:
+      public-key-path: keys/public_key.pem # RSA公钥文件路径
+      private-key-path: keys/private_key.pem # RSA私钥文件路径
+    aes:
+      key: YmVVaTJUNGdvV3huQnZXZzlEUE9kdnBaaS9ZcTZ0UzZtWXl2TWVXTzQ0Qz0=
+
 
 #logging:
 #  config: classpath:log4j2-spring.xml
