--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: org.sqlite.JDBC
-    url: jdbc:sqlite:./data/light_chaser_server.db
-    username: 
+    url: "jdbc:sqlite:${user.dir}/lc-server6.db"
+    username:
     password: 
     # 使用HikariCP连接池
     hikari:
