--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.sqlite.JDBC
-    url: "jdbc:sqlite:${user.dir}/lc-server6.db"
+    url: "jdbc:sqlite:${user.dir}/lc-server.db"
     username:
-    password: 
+    password:
     # 使用HikariCP连接池
     hikari:
       minimum-idle: 1
@@ -29,9 +29,7 @@ mybatis-plus:
 
 
 light-chaser:
-  project-resource-path: ./data/resources # 项目资源路径
-  source-image-path: /static/images/ # 源图片路径
-  cover-path: /static/covers/ # 封面路径
+#  project-resource-path: ./data/resources # 项目资源路径
   migration: # 是否自动跑sql脚本
     enable: true
   crypto:
